lib/src/bindings.dart


  late final _ndarray_set_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Int64)>>('ndarray_set_int64');
  late final _ndarray_set_int64 = _ndarray_set_int64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets an unsigned 32-bit integer ndarray data element.
  int ndarray_set_uint32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_uint32(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Uint32)>>('ndarray_set_uint32');
  late final _ndarray_set_uint32 = _ndarray_set_uint32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets a signed 32-bit integer ndarray data element.
  int ndarray_set_int32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_int32(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('ndarray_set_int32');
  late final _ndarray_set_int32 = _ndarray_set_int32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets an unsigned 16-bit integer ndarray data element.
  int ndarray_set_uint16(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_uint16(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Uint16)>>('ndarray_set_uint16');
  late final _ndarray_set_uint16 = _ndarray_set_uint16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets a signed 16-bit integer ndarray data element.
  int ndarray_set_int16(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_int16(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Int16)>>('ndarray_set_int16');
  late final _ndarray_set_int16 = _ndarray_set_int16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets an unsigned 8-bit integer ndarray data element.
  int ndarray_set_uint8(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_uint8(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Uint8)>>('ndarray_set_uint8');
  late final _ndarray_set_uint8 = _ndarray_set_uint8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets a signed 8-bit integer ndarray data element.
  int ndarray_set_int8(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_int8(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Int8)>>('ndarray_set_int8');
  late final _ndarray_set_int8 = _ndarray_set_int8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets a double-precision complex floating-point ndarray data element.
  int ndarray_set_complex128(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ndarray_complex128_t v,
  ) {
    return _ndarray_set_complex128(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_complex128Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ndarray_complex128_t)>>('ndarray_set_complex128');
  late final _ndarray_set_complex128 = _ndarray_set_complex128Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ndarray_complex128_t)>();

  /// Sets a single-precision complex floating-point ndarray data element.
  int ndarray_set_complex64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ndarray_complex64_t v,
  ) {
    return _ndarray_set_complex64(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ndarray_complex64_t)>>('ndarray_set_complex64');
  late final _ndarray_set_complex64 = _ndarray_set_complex64Ptr.asFunction<
      int Function(
          ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, ndarray_complex64_t)>();

  /// Sets a boolean ndarray data element.
  int ndarray_set_bool(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    bool v,
  ) {
    return _ndarray_set_bool(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Bool)>>('ndarray_set_bool');
  late final _ndarray_set_bool = _ndarray_set_boolPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, bool)>();

  /// Sets an ndarray data element specified by a byte array pointer.
  int ndarray_set_ptr_value(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Void> v,
  ) {
    return _ndarray_set_ptr_value(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Void>)>>('ndarray_set_ptr_value');
  late final _ndarray_set_ptr_value = _ndarray_set_ptr_valuePtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Void>)>();

  /// Sets a double-precision floating-point ndarray data element specified by a
  /// byte array pointer.
  int ndarray_set_ptr_float64(
    ffi.Pointer<ffi.Uint8> idx,
    double v,
  ) {
    return _ndarray_set_ptr_float64(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Double)>>('ndarray_set_ptr_float64');
  late final _ndarray_set_ptr_float64 = _ndarray_set_ptr_float64Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, double)>();

  /// Sets a single-precision floating-point ndarray data element specified by a
  /// byte array pointer.
  int ndarray_set_ptr_float32(
    ffi.Pointer<ffi.Uint8> idx,
    double v,
  ) {
    return _ndarray_set_ptr_float32(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Float)>>('ndarray_set_ptr_float32');
  late final _ndarray_set_ptr_float32 = _ndarray_set_ptr_float32Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, double)>();

  /// Sets an unsigned 64-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_set_ptr_uint64(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_uint64(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Uint64)>>('ndarray_set_ptr_uint64');
  late final _ndarray_set_ptr_uint64 = _ndarray_set_ptr_uint64Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets a signed 64-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_set_ptr_int64(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_int64(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int64)>>('ndarray_set_ptr_int64');
  late final _ndarray_set_ptr_int64 = _ndarray_set_ptr_int64Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets an unsigned 32-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_set_ptr_uint32(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_uint32(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Uint32)>>('ndarray_set_ptr_uint32');
  late final _ndarray_set_ptr_uint32 = _ndarray_set_ptr_uint32Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets a signed 32-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_set_ptr_int32(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_int32(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int32)>>('ndarray_set_ptr_int32');
  late final _ndarray_set_ptr_int32 = _ndarray_set_ptr_int32Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets an unsigned 16-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_set_ptr_uint16(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_uint16(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Uint16)>>('ndarray_set_ptr_uint16');
  late final _ndarray_set_ptr_uint16 = _ndarray_set_ptr_uint16Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets a signed 16-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_set_ptr_int16(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_int16(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int16)>>('ndarray_set_ptr_int16');
  late final _ndarray_set_ptr_int16 = _ndarray_set_ptr_int16Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets an unsigned 8-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_set_ptr_uint8(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_uint8(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Uint8)>>('ndarray_set_ptr_uint8');
  late final _ndarray_set_ptr_uint8 = _ndarray_set_ptr_uint8Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Sets a signed 8-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_set_ptr_int8(
    ffi.Pointer<ffi.Uint8> idx,
    int v,
  ) {
    return _ndarray_set_ptr_int8(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int8)>>('ndarray_set_ptr_int8');
  late final _ndarray_set_ptr_int8 = _ndarray_set_ptr_int8Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();
